fix: tweak spacing and alignmnet when geocode bar is visible (#918)

--- a/src/base/static/scss/_media.scss
+++ b/src/base/static/scss/_media.scss
@@ -455,9 +455,14 @@
     }
 
     .geocoding-bar-enabled {
-      #content, #main-btns-container {
+      #main-btns-container {
         // header + geocode bar + alignment with leaflet controls
         top: $header-height-fullscreen + 72px + 10px;
+      }
+
+      #content {
+        // header + geocode bar
+        top: $header-height-fullscreen + 72px;
       }
     }
 
